--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 /* Header Section */
 .intro {
-	display: table;
+	display: flex;
 	width: 100%;
 	padding: 0;
 	background: url(../img/intro-bg.jpg) no-repeat center center;
@@ -181,6 +181,12 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	-moz-background-size: cover;
 	background-size: cover;
 	-o-background-size: cover;
+}
+@media all and (max-width: 768px) {
+	.intro {
+		justify-content: space-around;
+		flex: 100%;
+	}
 }
 .intro .overlay {
 	background: rgba(0,0,0,0.4);
