--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 /* Header Section */
 .intro {
-	display: flex;
+	display: table;
 	width: 100%;
 	padding: 0;
 	background: url(../img/intro-bg.jpg) no-repeat center center;
